@@ -11,7 +11,7 @@
     <parent>
         <groupId>nl.fontys.sebivenlo</groupId>
         <artifactId>sebipom</artifactId>
-        <version>2.3.5</version>
+        <version>2.3.8</version>
     </parent>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,4 +24,25 @@
             <scope>provided</scope> 
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- add add-opens lines for all packages in your module that are tested.
+                        For testing it is fine to open your packages for the whole world, which includes
+                        e.g. junit, assertj, and mockito. 
+                        Also leave ${atgLine} because it is set/used by the coverage plugin.
+                    -->
+                    <argLine> 
+                        ${argLine}
+                        --add-opens nl.fontys.sebidao/nl.fontys.sebivenlo.dao=ALL-UNNAMED
+                        --add-opens nl.fontys.sebidao/nl.fontys.sebivenlo.dao.pg=ALL-UNNAMED
+                        --add-opens nl.fontys.sebidao/nl.fontys.sebivenlo.dao.memory=ALL-UNNAMED
+                        --add-opens myfirstmodule/my.util=ALL-UNNAMED
+                    </argLine>
+                </configuration>    
+            </plugin>
+        </plugins>
+    </build>
 </project>
